icon for menu added, category menu z-index fix

--- a/app/styles/components/category-nav.scss
+++ b/app/styles/components/category-nav.scss
@@ -19,7 +19,7 @@
             background-size: cover;
 
             &._c1 {
-                @include bg-image('/category-2.png');
+                @include bg-image('/category-1.png');
             }
 
             &._c2 {
@@ -82,6 +82,7 @@
         background-color: $white;
         transition: $transition-time all;
         opacity: 1;
+        z-index: 2;
 
         &._hidden {
             pointer-events: none;
